Revert "Update translation files"
This reverts commit c6100b3729aee9bba84149317b28176a0fc40979.

--- a/locales/by.strings
+++ b/locales/by.strings
@@ -42,7 +42,9 @@
 "all_title" = "Усе";
 "information" = "Інфармацыя";
 "status" = "Статус";
+
 "relationship" = "Сямейнае становішча";
+
 "relationship_0" = "Не выбрана";
 "relationship_1" = "Ня женаты";
 "relationship_2" = "Сустракаюся";
@@ -52,7 +54,9 @@
 "relationship_6" = "Закаханы";
 "relationship_7" = "Усё складана";
 "relationship_8" = "У актыўным пошуку";
+
 "politViews" = "Паліт. погляды";
+
 "politViews_0" = "На выбраныя";
 "politViews_1" = "індыферэнтнага";
 "politViews_2" = "Камуністычныя";
@@ -63,13 +67,17 @@
 "politViews_7" = "Манархічныя";
 "politViews_8" = "Ультраконсервативные";
 "politViews_9" = "Либертарианские";
+
 "contact_information" = "Кантактная інфармацыя";
+
 "email" = "Пошта";
 "phone" = "Тэлефон";
 "telegram" = "Telegram";
 "city" = "Горад";
 "address" = "Адрас";
+
 "personal_information" = "Асабістая інфармацыя";
+
 "interests" = "Інтарэсы";
 "favorite_music" = "Любімая музыка";
 "favorite_films" = "Любімыя фільмы";
@@ -96,8 +104,10 @@
 "x_out_of" = "$1 з";
 "wall_zero" = "няма запісаў";
 "wall_one" = "адзіная запіс";
+"wall_few" = "$1 складнік";
 "wall_many" = "$1 складнікаў";
 "wall_other" = "$1 складнікаў";
+
 "nsfw_warning" = "Дадзены пост можа ўтрымліваць 18+ кантэнт";
 
 /* Friends */
@@ -115,28 +125,40 @@
 "req" = "Заяўкі";
 "friends_online" = "Сябры ан-лайн";
 "all_friends" = "Ўсе сябры";
+
 "friends_zero" = "Няма сяброў";
 "friends_one" = "$1 сябар";
+"friends_few" = "$1 аднаго";
 "friends_many" = "$1 сяброў";
 "friends_other" = "$1 сяброў";
+
 "friends_online_zero" = "Няма сяброў ан-лайн";
 "friends_online_one" = "$1 сябар ан-лайн";
+"friends_online_few" = "$1 аднаго ан-лайн";
 "friends_online_many" = "$1 сяброў ан-лайн";
 "friends_online_other" = "$1 сяброў ан-лайн";
+
 "followers_zero" = "Няма падпісчыкаў";
 "followers_one" = "$1 падпісант";
+"followers_few" = "$1 падпісчыка";
 "followers_many" = "$1 падпісчыкаў";
 "followers_other" = "$1 падпісчыкаў";
+
 "subscriptions_zero" = "Ні адной падпіскі";
 "subscriptions_one" = "$1 падпіска";
+"subscriptions_few" = "$1 падпіскі";
 "subscriptions_many" = "$1 падпісак";
 "subscriptions_other" = "$1 падпісак";
+
 "friends_list_zero" = "У Вас пака няма сяброў";
 "friends_list_one" = "У Вас $1 сябар";
+"friends_list_few" = "У Вас $1 сябра";
 "friends_list_many" = "У Вас $1 сяброў";
 "friends_list_other" = "У Вас $1 сяброў";
+
 "friends_list_online_zero" = "У Вас пака няма сяброў ан-лайн";
 "friends_list_online_one" = "У Вас $1 сябар ан-лайн";
+"friends_list_online_few" = "У Вас $1 сябра ан-лайн";
 "friends_list_online_many" = "У Вас $1 сяброў ан-лайн";
 "friends_list_online_other" = "У Вас $1 сяброў ан-лайн";
 
@@ -158,20 +180,27 @@
 "group_type_open" = "Гэта адкрытая група. У яе можа ўступіць любы ахвочы.";
 "group_type_closed" = "Гэта закрытая група. Для ўступлення неабходна падаваць заяўку.";
 "creator" = "Стваральнік";
+
 "role" = "Роля";
 "administrator" = "Адміністратар";
 "promote_to_admin" = "Падвысіць да адміністратара";
 "devote" = "Разжалаваць";
+
 "participants_zero" = "Ніводнага ўдзельніка";
 "participants_one" = "Адзін удзельнік";
+"participants_few" = "$1 удзельніка";
 "participants_many" = "$1 удзельнікаў";
 "participants_other" = "$1 удзельнікаў";
+
 "groups_zero" = "Ні адной групы";
 "groups_one" = "Адна група";
+"groups_few" = "$1 групы";
 "groups_many" = "$1 гуртоў";
 "groups_other" = "$1 гуртоў";
+
 "meetings_zero" = "Ні адной сустрэчы";
 "meetings_one" = "Адна сустрэча";
+"meetings_few" = "$1 сустрэчы";
 "meetings_many" = "$1 сустрэч";
 "meetings_other" = "$1 сустрэч";
 
@@ -185,8 +214,10 @@
 "upload_photo" = "Загрузіць фатаграфію";
 "photo" = "Фатаграфія";
 "upload_button" = "Загрузіць";
+
 "albums_zero" = "Няма альбомаў";
 "albums_one" = "Адзін альбом";
+"albums_few" = "$1 альбома";
 "albums_many" = "$1 альбомаў";
 "albums_other" = "$1 альбомаў";
 
@@ -200,8 +231,10 @@
 "actions" = "Дзеянні";
 "feed" = "Навіны";
 "publish_post" = "Дадаць запіс";
+
 "notes_zero" = "Ні адной нататкі";
 "notes_one" = "Адна нататка";
+"notes_few" = "$1 нататкі";
 "notes_many" = "$1 нататак";
 "notes_other" = "$1 нататак";
 
@@ -219,26 +252,33 @@
 "my_feedback" = "Мае Адказы";
 "my_settings" = "Мае Налады";
 "bug_tracker" = "Баг-трэкер";
+
 "menu_login" = "Уваход";
 "menu_registration" = "Рэгістрацыя";
 "menu_help" = "Дапамога";
+
 "header_home" = "галоўная";
 "header_groups" = "групы";
+"header_donate" = "падтрымаць";
 "header_people" = "людзі";
 "header_invite" = "запрасіць";
 "header_help" = "дапамога";
 "header_log_out" = "выйсці";
 "header_search" = "Пошук";
+
 "header_login" = "Уваход";
 "header_registration" = "Рэгістрацыя";
 "header_help" = "Дапамога";
+
 "footer_blog" = "блог";
 "footer_help" = "дапамога";
 "footer_developers" = "распрацоўнікам";
 "footer_choose_language" = "выбраць мову";
 "footer_privacy" = "прыватнасць";
+
 "notes_zero" = "Ні адной нататкі";
 "notes_one" = "Адна нататка";
+"notes_few" = "$1 нататкі";
 "notes_many" = "$1 нататак";
 "notes_other" = "$1 нататак";
 
@@ -249,20 +289,27 @@
 "avatar" = "Аватар";
 "privacy" = "Прыватнасць";
 "interface" = "Знешні выгляд";
+
 "profile_picture" = "Малюнак старонкі";
+
 "picture" = "Малюнак";
+
 "change_password" = "Змяніць пароль";
 "old_password" = "Стары пароль";
 "new_password" = "Новы пароль";
 "repeat_password" = "Паўтарыце пароль";
+
 "avatars_style" = "Адлюстраванне аватара";
 "style" = "Стыль";
+
 "default" = "Па змаўчанні";
 "cut" = "Абразанне";
 "round_avatars" = "Круглы аватар";
+
 "search_for_groups" = "Пошук груп";
 "search_for_people" = "Пошук людзей";
 "search_button" = "Знайсці";
+
 "privacy_setting_access_page" = "Каму ў інтэрнэце відаць маю старонку";
 "privacy_setting_read_info" = "Каму відаць асноўную інфармацыю маёй старонкі";
 "privacy_setting_see_groups" = "Каму відаць мае суполкі і сустрэчы";
@@ -280,6 +327,7 @@
 "privacy_value_only_me" = "Толькі я";
 "privacy_value_only_me_dative" = "Толькі мне";
 "privacy_value_nobody" = "Ніхто";
+
 "your_email_address" = "Адрас Вашай электроннай пошты";
 "your_page_address" = "Адрас Вашай старонкі";
 "page_address" = "Адрас старонкі";
@@ -288,6 +336,7 @@
 "you_can_also" = "Вы таксама можаце";
 "delete_your_page" = "выдаліць сваю старонку";
 "delete_album" = "выдаліць альбом";
+
 "ui_settings_interface" = "Інтэрфейс";
 "ui_settings_sidebar" = "Левае меню";
 "ui_settings_rating" = "Рэйтынг";
@@ -308,12 +357,15 @@
 "video_uploaded" = "Загружана";
 "video_updated" = "Абнаўленне";
 "video_link_to_yt" = "Спасылка на YT";
+
 "info_name" = "Назва";
 "info_description" = "Апісанне";
 "info_uploaded_by" = "Загрузіў";
 "info_upload_date" = "Дата загрузкі";
+
 "videos_zero" = "Ні адной відэазапісы";
 "videos_one" = "Адна відэазапіс";
+"videos_few" = "$1 відэазапісы";
 "videos_many" = "$1 відэазапісаў";
 "videos_other" = "$1 відэазапісаў";
 
@@ -323,6 +375,7 @@
 "feedback" = "Адказы";
 "unread" = "Непрачытаныя";
 "archive" = "Архіў";
+
 "notifications_like" = "$1 спадабалася ваша $2запіс$3 ад $4";
 "notifications_repost" = "$1 падзяліўся(-лась) вашай $2запісью$3 от $4";
 "notifications_comment_under" = "$1 пакінул(-ла) комментарый пад $2";
@@ -332,11 +385,13 @@
 "notifications_under_video" = "вашым $3видэа$4";
 "notifications_post" = "$1 напісаў(-ла) $2запіс$3 на вашай сцяне: $4";
 "notifications_appoint" = "$1 назначыў вас кіраўніком суполкі $2";
+
 "nt_liked_yours" = "спадабаўся ваш";
 "nt_shared_yours" = "падзяліўся(-ась) вашым";
 "nt_commented_yours" = "пакінуў(а) каментар пад";
 "nt_written_on_your_wall" = "напісал(а) на вашай сцяне";
 "nt_made_you_admin" = "прызначыў(ла) вас кіраўніком суполкі";
+
 "nt_from" = "ад";
 "nt_yours_adjective" = "вашым";
 "nt_yours_feminitive_adjective" = "вашай";
@@ -344,9 +399,16 @@
 "nt_post_instrumental" = "пастом";
 "nt_note_instrumental" = "нататкай";
 "nt_photo_instrumental" = "фатаграфіяй";
+
+/* Time */
+
+"Time_at_sp" = " у ";
 "Time_just_now" = "толькі што";
+"Time_exactly_five_minutes_ago" = "роўна 5 хвілін таму";
 "Time_minutes_ago" = "$1 хвілін таму";
+"Time_today" = "сёння";
 "Time_yesterday" = "учора";
+
 "your_email_address" = "Адрас Вашай электроннай пошты";
 "your_page_address" = "Адрас Вашай старонкі";
 "page_address" = "Адрас старонкі";
@@ -355,6 +417,7 @@
 "you_can_also" = "Вы таксама можаце";
 "delete_your_page" = "выдаліць сваю старонку";
 "delete_album" = "выдаліць альбом";
+
 "ui_settings_interface" = "Інтэрфейс";
 "ui_settings_sidebar" = "Левае меню";
 "ui_settings_rating" = "Рэйтынг";
@@ -369,8 +432,10 @@
 "error_4" = "Карыстальнік не існуе";
 "information_-1" = "Аперацыя выканана паспяхова";
 "information_-2" = "Уваход выкананы паспяхова";
+
 "no_data" = "Няма дадзеных";
 "no_data_description" = "У гэтым прадстаўленні адсутнічаюць дадзеныя.";
+
 "error" = "Памылка";
 "error_shorturl" = "Дадзены кароткі адрас ужо заняты.";
 "error_segmentation" = "Памылка сегментацыі";
@@ -378,10 +443,13 @@
 "error_old_password" = "Стары пароль не супадае";
 "error_new_password" = "Новы пароль не супадае";
 "error_shorturl_incorrect" = "Кароткі адрас мае некарэктны фармат.";
+
 "forbidden" = "Памылка доступу";
 "forbidden_comment" = "Налады прыватнасці гэтага карыстальніка не дазваляюць вам глядзець на яго старонку.";
+
 "changes_saved" = "Змены захаваныя";
 "changes_saved_comment" = "Новыя дадзеныя з'явяцца на вашай старонцы";
+
 "photo_saved" = "Фатаграфія захаваная";
 "photo_saved_comment" = "Новае фатаграфія профілю з'явіцца ў вас на старонцы";
 
@@ -403,17 +471,22 @@
 "gifts_zero" = "Няма падарункаў";
 "gifts_one" = "Адзін падарунак";
 "gifts_other" = "$1 падарункаў";
+
 "send_gift" = "Адправіць падарунак";
+
 "gift_select" = "Выбраць падарунак";
 "collections" = "Калекцыі";
 "confirm" = "Пацвердзіць";
 "as_anonymous" = "Ананімна";
 "gift_your_message" = "Ваша паведамленне";
+
 "free_gift" = "Бясплатна";
 "coins" = "Галасы";
 "coins_zero" = "0 галасоў";
+"coins_few" = "$1 голаса";
 "coins_one" = "Адзін голас";
 "coins_other" = "$1 галасоў";
+
 "comment" = "Каментарый";
 "sender" = "Адпраўнік";
 
