--- a/locales/eo.strings
+++ b/locales/eo.strings
@@ -15,25 +15,31 @@
 "password" = "Pasvorto";
 "registration" = "Registrado";
 "forgot_password" = "Ĉu vi forgesis vian pasvorton?";
+
 "login_failed" = "Ensaluto malsukcesis";
 "invalid_username_or_password" = "La uzantnomo aŭ pasvorto, kiun vi enigis, estas malĝusta. <a href='/restore'>Ĉu vi forgesis vian pasvorton?</a>";
+
 "failed_to_register" = "Malsukcesis registri";
 "referral_link_invalid" = "La invito ligilo estas malvalida.";
 "registration_disabled" = "Registrado estis malŝaltita de la sistemadministranto.";
 "user_already_exists" = "Uzanto kun ĉi tiu retpoŝto jam ekzistas.";
+
 "access_recovery" = "Aliro reakiro";
 "page_access_recovery" = "Restarigu aliron al la paĝo";
 "access_recovery_info" = "Ĉu vi forgesis vian pasvorton? Ne maltrankviliĝu, enigu viajn detalojn kaj ni sendos al vi retpoŝton kun instrukcioj pri kiel reakiri vian konton.";
 "access_recovery_info_2" = "Enigu vian novan pasvorton. Ĉiuj nunaj sesioj estos suspenditaj kaj alirĵetonoj estos revokitaj.";
 "reset_password" = "Reset Pasvorto";
 "2fa_code_2" = "Dufaktora aŭtentikigkodo";
+
 "password_successfully_reset" = "Via pasvorto estis sukcese rekomencigita.";
 "password_reset_email_sent" = "Se vi estas registrita, vi ricevos instrukciojn retpoŝte.";
 "password_reset_error" = "Neatendita eraro okazis dum restarigo de la pasvorto.";
 "password_reset_rate_limit_error" = "Vi ne povas fari tion tiel ofte, pardonu.";
+
 "registration_disabled_info" = "Registrado estis malŝaltita de la sistemadministranto. Se eble, petu inviton de via amiko, se li estas registrita en ĉi tiu retejo.";
 "registration_closed" = "Registrado estas fermita.";
 "invites_you_to" = "<strong>$1</strong> invitas vin al $2";
+
 "register_meta_desc" = "Aliĝu por $1 nun!";
 "register_referer_meta_title" = "$1 invitas vin al $2!";
 "register_referer_meta_desc" = "Aliĝu $1 kaj tunoj da aliaj uzantoj por $2!";
@@ -69,11 +75,15 @@
 "deceased_person" = "Forpasinta persono";
 "none" = "neniu";
 "send" = "Sendi";
+
 "years_zero" = "0 jara";
 "years_one" = "1 jara";
+"years_few" = "$1 jara";
 "years_many" = "$1 jara";
 "years_other" = "$1 jara";
+
 "relationship" = "Rilato";
+
 "relationship_0" = "Ne elektita";
 "relationship_1" = "Ne geedziĝis";
 "relationship_2" = "Datado";
@@ -83,7 +93,9 @@
 "relationship_6" = "Enamiĝinta";
 "relationship_7" = "Ĉio estas komplika";
 "relationship_8" = "Aktive serĉante";
+
 "politViews" = "Politikaj vidoj";
+
 "politViews_0" = "Ne elektita";
 "politViews_1" = "Indiferenta";
 "politViews_2" = "Komunisto";
@@ -94,14 +106,18 @@
 "politViews_7" = "Monarĥo";
 "politViews_8" = "Ultra-Konservativa";
 "politViews_9" = "Libervolisma";
+
 "contact_information" = "Kontakt-informoj";
+
 "email" = "Retpoŝto";
 "phone" = "Telefono";
 "telegram" = "Telegram";
 "personal_website" = "Persona retejo";
 "city" = "Urbo";
 "address" = "Adreso";
+
 "personal_information" = "Persona informo";
+
 "interests" = "Interesoj";
 "favorite_music" = "Preferata muziko";
 "favorite_films" = "Preferataj filmoj";
@@ -109,11 +125,13 @@
 "favorite_books" = "Preferataj libroj";
 "favorite_quotes" = "Ŝatataj citaĵoj";
 "information_about" = "Pri";
+
 "updated_at" = "Ĝisdatigita je $1";
 
 /* Wall */
 
 "feed" = "Novaĵoj";
+
 "post_writes_m" = "verkis";
 "post_writes_f" = "verkis";
 "post_writes_g" = "eldonita";
@@ -133,13 +151,17 @@
 "x_out_of" = "$1 el";
 "wall_zero" = "neniuj afiŝoj";
 "wall_one" = "$1 afiŝo";
+"wall_few" = "$1 rekordoj";
 "wall_many" = "$1 rekordoj";
 "wall_other" = "$1 afiŝoj";
 "publish_post" = "Aldonu afiŝon";
 "view_other_comments" = "Rigardu aliajn komentojn";
+
 "no_comments" = "Sen komentoj";
+
 "all_news" = "Ĉiuj novaĵoj";
 "posts_per_page" = "Nombro da afiŝoj po paĝo";
+
 "attachment" = "Alligiteco";
 "post_as_group" = "Afiŝu kiel grupo";
 "comment_as_group" = "Komentu kiel grupo";
@@ -166,16 +188,22 @@
 "incoming_req" = "Abonantoj";
 "outcoming_req" = "Petoj";
 "req" = "Petoj";
+
 "friends_zero" = "Neniuj amikoj";
 "friends_one" = "$1 amiko";
+"friends_few" = "$1 amikoj";
 "friends_many" = "$1 amikoj";
 "friends_other" = "$1 amikoj";
+
 "followers_zero" = "Neniuj sekvantoj";
 "followers_one" = "$1 sekvanto";
+"followers_few" = "$1 sekvantoj";
 "followers_many" = "$1 sekvantoj";
 "followers_other" = "$1 sekvantoj";
+
 "subscriptions_zero" = "Neniuj abonoj";
 "subscriptions_one" = "$1 abono";
+"subscriptions_few" = "$1 abonoj";
 "subscriptions_many" = "$1 abonoj";
 "subscriptions_other" = "$1 abonoj";
 
@@ -204,8 +232,11 @@
 "only_administrators" = "Nur administrantoj";
 "website" = "Retejo";
 "managed" = "Administrita";
+
 "administrators_one" = "$1 administranto";
+"administrators_few" = "$1 administrantoj";
 "administrators_other" = "$1 administrantoj";
+
 "role" = "Rolo";
 "administrator" = "Administranto";
 "promote_to_admin" = "Promocii al administranto";
@@ -219,16 +250,22 @@
 "group_display_only_creator" = "Montru nur grupkreinto";
 "group_display_all_administrators" = "Montru ĉiujn administrantojn";
 "group_dont_display_administrators_list" = "Montru nenion";
+
 "participants_zero" = "Neniuj partoprenantoj";
 "participants_one" = "$1 partoprenanto";
+"participants_few" = "$1 partoprenantoj";
 "participants_many" = "$1 partoprenantoj";
 "participants_other" = "$1 partoprenantoj";
+
 "groups_zero" = "Neniuj grupoj";
 "groups_one" = "$1 grupo";
+"groups_few" = "$1 grupoj";
 "groups_many" = "$1 grupoj";
 "groups_other" = "$1 grupoj";
+
 "meetings_zero" = "Neniuj kunvenoj";
 "meetings_one" = "$1 kunveno";
+"meetings_few" = "$1 kunvenoj";
 "meetings_many" = "$1 kunvenoj";
 "meetings_other" = "$1 kunvenoj";
 
@@ -242,11 +279,15 @@
 "upload_photo" = "Alŝutu foton";
 "photo" = "Foto";
 "upload_button" = "Alŝuti";
+
 "open_original" = "Malfermu originalon";
+
 "avatar_album" = "Profilaj fotoj";
 "wall_album" = "Muraj fotoj";
+
 "albums_zero" = "Neniuj albumoj";
 "albums_one" = "$1 albumo";
+"albums_few" = "$1 albumoj";
 "albums_many" = "$1 albumoj";
 "albums_other" = "$1 albumoj";
 
@@ -258,8 +299,10 @@
 "text_note" = "Enhavo";
 "create_note" = "Kreu noton";
 "actions" = "Agoj";
+
 "notes_zero" = "Neniuj notoj";
 "notes_one" = "$1 noto";
+"notes_few" = "$1 notoj";
 "notes_many" = "$1 notoj";
 "notes_other" = "$1 notoj";
 
@@ -277,18 +320,23 @@
 "my_feedback" = "Miaj Sugestoj";
 "my_settings" = "Miaj Agordoj";
 "bug_tracker" = "Cimo-spurilo";
+
 "menu_login" = "Ensaluti";
 "menu_registration" = "Registrado";
 "menu_help" = "Helpu";
+
 "header_home" = "hejmen";
 "header_groups" = "grupoj";
+"header_donate" = "donate";
 "header_people" = "homoj";
 "header_invite" = "inviti";
 "header_help" = "helpo";
 "header_log_out" = "log out";
 "header_search" = "Serĉu";
+
 "header_login" = "ensaluti";
 "header_registration" = "registriĝo";
+
 "footer_blog" = "blogo";
 "footer_help" = "helpo";
 "footer_developers" = "programistoj";
@@ -302,24 +350,32 @@
 "avatar" = "Avataro";
 "privacy" = "Privateco";
 "interface" = "Interfaco";
+
 "profile_picture" = "Profila bildo";
+
 "picture" = "Bildo";
+
 "change_password" = "Ŝanĝi pasvorton";
 "old_password" = "Malnova pasvorto";
 "new_password" = "Nova pasvorto";
 "repeat_password" = "Ripetu pasvorton";
+
 "avatars_style" = "Stilo avataro";
 "style" = "Stilo";
+
 "default" = "Default";
 "cut" = "Tranĉi";
 "round_avatars" = "Rondaj avataroj";
+
 "search_for_groups" = "Serĉu grupojn";
 "search_for_people" = "Serĉi homojn";
 "search_button" = "Trovi";
 "results_zero" = "Neniuj rezultoj";
 "results_one" = "$1 rezulto";
+"results_few" = "$1 rezultoj";
 "results_many" = "$1 rezultoj";
 "results_other" = "$1 rezultoj";
+
 "privacy_setting_access_page" = "Kiu povas vidi mian paĝon";
 "privacy_setting_read_info" = "Kiu povas vidi ĉefajn informojn de mia paĝo";
 "privacy_setting_see_groups" = "Kiu povas vidi miajn grupojn kaj renkontiĝojn";
@@ -337,6 +393,7 @@
 "privacy_value_only_me" = "Nur mi";
 "privacy_value_only_me_dative" = "Nur mi";
 "privacy_value_nobody" = "Neniu";
+
 "your_email_address" = "Via retpoŝta adreso";
 "your_page_address" = "Via adrespaĝo";
 "page_address" = "Adrespaĝo";
@@ -345,30 +402,36 @@
 "you_can_also" = "Vi povas anka";
 "delete_your_page" = "forigu vian paĝon";
 "delete_album" = "forigi albumon";
+
 "ui_settings_interface" = "Interfaco";
 "ui_settings_sidebar" = "Maldekstra menuo";
 "ui_settings_rating" = "Taksado";
 "ui_settings_rating_show" = "Montru";
 "ui_settings_rating_hide" = "Kaŝi";
+
 "two_factor_authentication" = "Dufaktora aŭtentigo";
 "two_factor_authentication_disabled" = "Provizas fidindan protekton kontraŭ hakado: por eniri la paĝon, vi devas enigi la kodon akiritan en la aplikaĵo 2FA.";
 "two_factor_authentication_enabled" = "Dufaktora aŭtentigo estas ebligita. Via paĝo estas protektita.";
 "two_factor_authentication_login" = "Vi havas dufaktoran aŭtentikigon ebligita. Por ensaluti, enigu la kodon ricevitan en la aplikaĵo.";
+
 "two_factor_authentication_settings_1" = "Dufaktora aŭtentigo per TOTP povas esti uzata eĉ sen interreto. Por fari tion, vi bezonas kodon-generadan apon. Ekzemple, <b>Google Authenticator</b> por Android kaj iOS aŭ <b>FOSS Aegis kaj andOTP</b> por Android. Certigu, ke la dato kaj horo estas ĝuste agordita en via telefono.";
 "two_factor_authentication_settings_2" = "Uzante la apon por dufaktora aŭtentigo, skanu la QR-kodon sube:";
 "two_factor_authentication_settings_3" = "aŭ mane enigu la donitan sekretan ŝlosilon: <b>$1</b>.";
 "two_factor_authentication_settings_4" = "Nun enigu la kodon, kiun la aplikaĵo donis al vi, kaj la pasvorton por via paĝo, por ke ni povu konfirmi, ke vi vere estas.";
+
 "connect" = "Konekti";
 "enable" = "Ebligu";
 "disable" = "Malebligu";
 "code" = "Kodo";
 "2fa_code" = "2FA-kodo";
+
 "incorrect_password" = "Malĝusta pasvorto";
 "incorrect_code" = "Malĝusta kodo";
 "incorrect_2fa_code" = "Malĝusta dufaktora aŭtentikigkodo";
 "two_factor_authentication_enabled_message" = "Dufaktora aŭtentigo ebligita";
 "two_factor_authentication_enabled_message_description" = "Via paĝo fariĝis pli malfacila por haki. Ni rekomendas, ke vi elŝutu <a href='javascript:viewBackupCodes()'> rezervajn kodojn </a>";
 "two_factor_authentication_disabled_message" = "Dufaktora aŭtentigo malŝaltita";
+
 "view_backup_codes" = "Rigardu rezervajn kodojn";
 "backup_codes" = "Rezervaj kodoj por ensaluta konfirmo";
 "two_factor_authentication_backup_codes_1" = "Rezervaj kodoj permesas vin validigi vian ensaluton kiam vi ne havas aliron al via telefono, ekzemple, dum vojaĝado.";
@@ -389,12 +452,15 @@
 "video_uploaded" = "Alŝutita";
 "video_updated" = "Ĝisdatigita";
 "video_link_to_yt" = "Ligo al YouTube";
+
 "info_name" = "Titolo";
 "info_description" = "Priskribo";
 "info_uploaded_by" = "Alŝutite de";
 "info_upload_date" = "Upload date";
+
 "videos_zero" = "Neniuj filmetoj";
 "videos_one" = "$1 video";
+"videos_few" = "$1 videoj";
 "videos_many" = "$1 videoj";
 "videos_other" = "$1 videoj";
 
@@ -403,6 +469,7 @@
 "feedback" = "Retrosciigo";
 "unread" = "Nelegita";
 "archive" = "Arkivo";
+
 "notifications_like" = "$1 ŝatis vian $2afiŝon$3 de $4";
 "notifications_repost" = "$1 dividis vian $2post$3 de $4";
 "notifications_comment_under" = "$1 lasis komenton pri $2";
@@ -412,11 +479,13 @@
 "notifications_under_video" = "vian $3video$4";
 "notifications_post" = "$1 publikigis $2a afiŝon$3 sur via muro: $4";
 "notifications_appoint" = "$1 nomumis vin kiel komunuma administranto $2";
+
 "nt_liked_yours" = "ŝatis la vian";
 "nt_shared_yours" = "dividis la vian";
 "nt_commented_yours" = "komentis la vian";
 "nt_written_on_your_wall" = "skribis sur via muro";
 "nt_made_you_admin" = "nomumis vin en la komunumo";
+
 "nt_from" = "de";
 "nt_yours_adjective" = "via";
 "nt_yours_feminitive_adjective" = "via";
@@ -433,9 +502,11 @@
 "time_minutes_ago" = "antaŭ $1 minutoj";
 "time_today" = "hodiaŭ";
 "time_yesterday" = "hieraŭ";
+
 "points" = "Voĉdonoj";
 "points_count" = "voĉoj";
 "on_your_account" = "sur via konto";
+
 "vouchers" = "Kuponoj";
 "have_voucher" = "Havu kuponon";
 "voucher_token" = "Kupona ĵetono";
@@ -457,24 +528,31 @@
 "gifts" = "Donacoj";
 "gifts_zero" = "Nulaj donacoj";
 "gifts_one" = "Unu donaco";
+"gifts_few" = "$1 donacoj";
 "gifts_many" = "$1 donacoj";
 "gifts_other" = "$1 gifts";
 "gifts_left" = "Restas donacoj: $1";
 "gifts_left_one" = "Restas unu donaco";
+"gifts_left_few" = "Restas $1 donacoj";
 "gifts_left_many" = "Restas $1 donacoj";
 "gifts_left_other" = "Restas $1 donacoj";
+
 "send_gift" = "Sendu donacon";
+
 "gift_select" = "Elektu donacon";
 "collections" = "Kolektoj";
 "confirm" = "Konfirmu";
 "as_anonymous" = "Kiel anonima";
 "gift_your_message" = "Via mesaĝo";
+
 "free_gift" = "Senpaga";
 "coins" = "Voĉdonoj";
 "coins_zero" = "0 voĉdono";
 "coins_one" = "Unu voĉdono";
+"coins_few" = "$1 voĉoj";
 "coins_many" = "$1 voĉoj";
 "coins_other" = "$1 voĉoj";
+
 "users_gifts" = "Donacoj";
 
 /* Support */
@@ -489,17 +567,25 @@
 "support_status_2" = "Fermita";
 "support_greeting_hi" = "Saluton, $1!";
 "support_greeting_regards" = "Komplenajn salutojn,<br/>$1 subtena teamo.";
+
 "support_faq" = "Oftaj Demandoj";
 "support_list" = "Listo de biletoj";
 "support_new" = "Nova bileto";
+
+"support_faq_title" = "Por kiu ĉi tiu retejo estas?";
 "support_faq_content" = "La retejo estas desegnita por trovi amikojn kaj konatojn, kaj ankaŭ vidi datumojn de uzantoj. Ĝi estas kiel urba adresaro, per kiu homoj povas rapide trovi koncernajn informojn pri homo.";
+
 "support_new_title" = "Eniri la temon de via bileto";
 "support_new_content" = "Describe the issue or suggestion";
+
 "comment" = "Komento";
 "sender" = "Sendanto";
+
 "author" = "Aŭtoro";
+
 "you_have_not_entered_text" = "Vi enigis neniun tekston";
 "you_have_not_entered_name_or_text" = "Vi ne enigis nomon aŭ tekston";
+
 "ticket_changed" = "Bileto ŝanĝiĝis";
 "ticket_changed_comment" = "La ŝanĝoj efektiviĝos post kelkaj sekundoj.";
 
@@ -516,8 +602,10 @@
 "error_4" = "Uzanto ne ekzistas";
 "information_-1" = "Sukceso";
 "information_-2" = "Sukceso de ensaluto";
+
 "no_data" = "Neniuj datumoj";
 "no_data_description" = "Ne estas datumoj.";
+
 "error" = "Eraro";
 "error_shorturl" = "Ĉi tiu mallonga adreso jam estas posedata.";
 "error_segmentation" = "Segmentación eraro";
@@ -526,32 +614,46 @@
 "error_new_password" = "Nova pasvorto ne kongruas";
 "error_shorturl_incorrect" = "La mallonga adreso havas malĝustan formaton.";
 "error_repost_fail" = "Malsukcesis kunhavigi afiŝon";
+
 "forbidden" = "Eraro de aliro";
 "forbidden_comment" = "La privatecaj agordoj de ĉi tiu uzanto ne permesas al vi rigardi lian paĝon.";
+
 "changes_saved" = "Ŝanĝoj konservitaj";
 "changes_saved_comment" = "Novaj datumoj aperos sur via paĝo";
+
 "photo_saved" = "Foto konservita";
 "photo_saved_comment" = "Nova profilbildo aperos sur via paĝo";
+
 "shared_succ" = "La afiŝo aperos sur via muro. Alklaku la sciigon por iri al via muro.";
+
 "invalid_email_address" = "Nevalida Retpoŝta Adreso";
 "invalid_email_address_comment" = "La retpoŝto kiun vi enigis ne estas ĝusta.";
+
 "invalid_telegram_name" = "Nevalida Telegram-kontonomo";
 "invalid_telegram_name_comment" = "Vi enigis nevalidan nomon de la konto de Telegramo.";
+
 "invalid_birth_date" = "Nevalida naskiĝdato";
 "invalid_birth_date_comment" = "La naskiĝdato, kiun vi enigis, ne estas ĝusta.";
+
 "token_manipulation_error" = "Eraro pri manipulado de ĵetonoj";
 "token_manipulation_error_comment" = "Token estas nevalida aŭ eksvalidiĝis";
+
 "profile_changed" = "Profilo ŝanĝita";
 "profile_changed_comment" = "Via aktiva profilo estis ŝanĝita.";
 "profile_not_found" = "Uzanto ne estas trovita.";
+
 "suspicious_registration_attempt" = "Suspektinda provo registri";
 "suspicious_registration_attempt_comment" = "Vi provis registriĝi de suspektinda loko.";
+
 "rate_limit_error" = "Choomba, ĉu vi estas tute fucked up?";
 "rate_limit_error_comment" = "Go to the brainwrap, drink the wheels. In $1, you cannot drop shitposts as often. Exception code: $2.";
+
 "not_enough_permissions" = "Ne sufiĉaj rajtoj";
 "not_enough_permissions_comment" = "Vi ne havas sufiĉajn rajtojn por plenumi ĉi tiun agon.";
+
 "login_required_error" = "Ne sufiĉaj rajtoj";
 "login_required_error_comment" = "Vi devas esti ensalutinta por vidi ĉi tiun paĝon.";
+
 "captcha_error" = "Karakteroj eniris malĝuste";
 "captcha_error_comment" = "Bonvolu fari certe ke vi plenigis en la captcha kampo korekte.";
 
@@ -569,5 +671,6 @@
 "no" = "Ne";
 "cancel" = "Nuligi";
 "edit_action" = "Ŝanĝi";
+
 "warning" = "Averto";
 "question_confirm" = "Ĉi tiu ago ne povas esti malfarita. Ĉu vi vere volas fari ĝin?";
