--- a/locales/ru_old.strings
+++ b/locales/ru_old.strings
@@ -1,6 +1,7 @@
 #include <ru>
 
 "__locale" = "ru_UA.utf8;ru_RU.UTF-8;Rus";
+"__WinEncoding" = "Windows-1251";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
@@ -15,25 +16,31 @@
 "password" = "Шифръ";
 "registration" = "Регистрація";
 "forgot_password" = "Запамятовали шифръ?";
+
 "login_failed" = "Не удалось войти";
 "invalid_username_or_password" = "Невѣрное имя пользователя или шифръ. <a href='/restore'>Забыли шифръ?</a>";
+
 "failed_to_register" = "Не удалось зарегистрироваться";
 "referral_link_invalid" = "Пригласительная ссылка недѣйствительна.";
 "registration_disabled" = "Регистрація отключена системнымъ администраторомъ.";
 "user_already_exists" = "Пользователь съ такимъ email уже существуетъ.";
+
 "access_recovery" = "Возстановленіе доступа";
 "page_access_recovery" = "Возстановить доступъ къ страницѣ";
 "access_recovery_info" = "Запамятовали шифръ? Не волнуйтесь, введите ваши данные и мы отправимъ вамъ email съ инструкціями по возстановленію аккаунта.";
 "access_recovery_info_2" = "Введите вашъ новый шифръ. Все текущіе сеансы будутъ пріостановлены и токены доступа будутъ аннулированы.";
 "reset_password" = "Сбросить шифръ";
 "2fa_code_2" = "Кодъ двухфакторной аутентификаціи";
+
 "password_successfully_reset" = "Вашъ шифръ былъ успѣшно сброшенъ.";
 "password_reset_email_sent" = "Если вы зарегистрированы, вы получите инструкціи на email.";
 "password_reset_error" = "Непредвидѣнная ошибка при сбросѣ шифра.";
 "password_reset_rate_limit_error" = "Нельзя дѣлать это такъ часто, извините.";
+
 "registration_disabled_info" = "Регистрація отключена системнымъ администраторомъ. При возможности попросите приглашеніе у вашего знакомаго, если онъ зарегистрированъ на этомъ сайтѣ.";
 "registration_closed" = "Регистрація закрыта.";
 "invites_you_to" = "<strong>$1</strong> приглашаетъ васъ въ $2";
+
 "register_meta_desc" = "Зарегистрируйтесь въ $1 прямо сейчасъ!";
 "register_referer_meta_title" = "$1 приглашаетъ васъ въ $2!";
 "register_referer_meta_desc" = "Присоединяйтесь къ $1 и множеству другихъ пользователей въ $2!";
@@ -69,11 +76,15 @@
 "deceased_person" = "Страница покойнаго человѣка";
 "none" = "отсутствуетъ";
 "send" = "Отправить";
+
 "years_zero" = "0 летъ";
 "years_one" = "1 годъ";
+"years_few" = "$1 года";
 "years_many" = "$1 летъ";
 "years_other" = "$1 летъ";
+
 "relationship" = "Семейное положеніе";
+
 "relationship_0" = "Не выбрано";
 "relationship_1" = "Холостъ";
 "relationship_2" = "Имѣю свиданія";
@@ -83,7 +94,9 @@
 "relationship_6" = "Влюбленъ";
 "relationship_7" = "Чортъ разберетъ";
 "relationship_8" = "Въ метаніяхъ";
+
 "politViews" = "Политъ. предпочтенiя";
+
 "politViews_0" = "Не выбраны";
 "politViews_1" = "Безразличныя";
 "politViews_2" = "Коммунистическія";
@@ -94,14 +107,18 @@
 "politViews_7" = "Монархическія";
 "politViews_8" = "Ультраконсервативныя";
 "politViews_9" = "Либертаріанскія";
+
 "contact_information" = "Контактная информація";
+
 "email" = "Электронная почта";
 "phone" = "Телефонъ";
 "telegram" = "Telegram";
 "personal_website" = "Личный сайтъ";
 "city" = "Городъ";
 "address" = "Адресъ";
+
 "personal_information" = "Личная информація";
+
 "interests" = "Интересы";
 "favorite_music" = "Любимыя композицiи";
 "favorite_films" = "Любимыя ленты";
@@ -109,11 +126,13 @@
 "favorite_books" = "Любимыя книги";
 "favorite_quotes" = "Любимыя высказыванiя";
 "information_about" = "О себѣ";
+
 "updated_at" = "Новыя данные отражены $1";
 
 /* Wall */
 
 "feed" = "Извѣстiя";
+
 "post_writes_m" = "написалъ";
 "post_writes_f" = "написала";
 "post_writes_g" = "опубликовали";
@@ -133,13 +152,17 @@
 "x_out_of" = "$1 изъ";
 "wall_zero" = "Нѣтъ извѣстій";
 "wall_one" = "единственное высказываніе";
+"wall_few" = "$1 высказыванія";
 "wall_many" = "$1 высказываній";
 "wall_other" = "$1 высказываній";
 "publish_post" = "Добавить высказываніе";
 "view_other_comments" = "Посмотрѣть остальные замѣчанія";
+
 "no_comments" = "Замѣчанія отсутствуютъ";
+
 "all_news" = "Всѣ извѣстiя";
 "posts_per_page" = "Количество высказываній на страницѣ";
+
 "attachment" = "Вложеніе";
 "post_as_group" = "Отъ имени общества";
 "comment_as_group" = "Отъ имени общества";
@@ -166,16 +189,22 @@
 "incoming_req" = "Почитатели";
 "outcoming_req" = "Входящіе прошенія";
 "req" = "Исходящіе прошенія";
+
 "friends_zero" = "Ни одного знакомца";
 "friends_one" = "$1 знакомецъ";
+"friends_few" = "$1 знакомца";
 "friends_many" = "$1 знакомцевъ";
 "friends_other" = "$1 знакомцевъ";
+
 "followers_zero" = "Ни одного почитателя";
 "followers_one" = "$1 почитатель";
+"followers_few" = "$1 почитателя";
 "followers_many" = "$1 почитателей";
 "followers_other" = "$1 почитателей";
+
 "subscriptions_zero" = "Ни одной подписки";
 "subscriptions_one" = "$1 подписка";
+"subscriptions_few" = "$1 подписки";
 "subscriptions_many" = "$1 подписокъ";
 "subscriptions_other" = "$1 подписокъ";
 
@@ -204,8 +233,11 @@
 "only_administrators" = "Только администраторы";
 "website" = "Сайтъ";
 "managed" = "Управляемые";
+
 "administrators_one" = "$1 администраторъ";
+"administrators_few" = "$1 администратора";
 "administrators_other" = "$1 администраторовъ";
+
 "role" = "Роль";
 "administrator" = "Член правленія";
 "promote_to_admin" = "Повысить до члена правленія";
@@ -219,16 +251,22 @@
 "group_display_only_creator" = "Отображать только владыко общества";
 "group_display_all_administrators" = "Отображать всѣхъ членов правленія";
 "group_dont_display_administrators_list" = "Ничего не отображать";
+
 "participants_zero" = "Ни одного участника";
 "participants_one" = "Одинъ участникъ";
+"participants_few" = "$1 участника";
 "participants_many" = "$1 участниковъ";
 "participants_other" = "$1 участниковъ";
+
 "groups_zero" = "Ни одной группы";
 "groups_one" = "Одна группа";
+"groups_few" = "$1 группы";
 "groups_many" = "$1 группъ";
 "groups_other" = "$1 группъ";
+
 "meetings_zero" = "Ни одной встрѣчи";
 "meetings_one" = "Одна встрѣча";
+"meetings_few" = "$1 встрѣчи";
 "meetings_many" = "$1 встрѣчъ";
 "meetings_other" = "$1 встрѣчъ";
 
@@ -242,11 +280,15 @@
 "upload_photo" = "Загрузить фотокарточку";
 "photo" = "Фотокарточка";
 "upload_button" = "Вклеить";
+
 "open_original" = "Открыть оригиналъ";
+
 "avatar_album" = "Фотографіи с паспорта";
 "wall_album" = "Фотографіи с салона";
+
 "albums_zero" = "Ни одного альбома";
 "albums_one" = "Одинъ альбомъ";
+"albums_few" = "$1 альбома";
 "albums_many" = "$1 альбомовъ";
 "albums_other" = "$1 альбомовъ";
 
@@ -258,8 +300,10 @@
 "text_note" = "Содержаніе";
 "create_note" = "Создать очерку";
 "actions" = "Дѣйствія";
+
 "notes_zero" = "Ни одной очерки";
 "notes_one" = "Одна очерка";
+"notes_few" = "$1 очерки";
 "notes_many" = "$1 очерок";
 "notes_other" = "$1 очерок";
 
@@ -277,18 +321,23 @@
 "my_feedback" = "Мои Отвѣты";
 "my_settings" = "Мои Настройки";
 "bug_tracker" = "Багъ-трекеръ";
+
 "menu_login" = "Входъ";
 "menu_registration" = "Регистрація";
 "menu_help" = "Помощь";
+
 "header_home" = "главная";
 "header_groups" = "общества";
+"header_donate" = "поддержать";
 "header_people" = "люди";
 "header_invite" = "пригласить";
 "header_help" = "помощь";
 "header_log_out" = "выйти";
 "header_search" = "Поискъ";
+
 "header_login" = "входъ";
 "header_registration" = "регистрація";
+
 "footer_blog" = "блогъ";
 "footer_help" = "помощь";
 "footer_developers" = "разработчикамъ";
@@ -302,25 +351,34 @@
 "avatar" = "Портретъ";
 "privacy" = "Конфиденціальность";
 "interface" = "Внѣшній видъ";
+
 "profile_picture" = "Изображеніе страницы";
+
 "picture" = "Изображеніе";
+
 "change_password" = "Измѣнить шифръ";
 "old_password" = "Старый шифръ";
 "new_password" = "Новый шифръ";
 "repeat_password" = "Повторите шифръ";
+
 "avatars_style" = "Отображеніе портрета";
 "style" = "Стиль";
+
 "default" = "по умолчанію";
+
 "arbitrary_avatars" = "Произвольные​";
 "cut" = "Квадратные​";
 "round_avatars" = "Круглые";
+
 "search_for_groups" = "Поискъ обществъ";
 "search_for_people" = "Поискъ людей";
 "search_button" = "Найти";
 "results_zero" = "Ни одного результата";
 "results_one" = "Одинъ результатъ";
+"results_few" = "$1 результата";
 "results_many" = "$1 результатовъ";
 "results_other" = "$1 результатовъ";
+
 "privacy_setting_access_page" = "Кому въ интернетѣ видно мою страницу";
 "privacy_setting_read_info" = "Кому видно основную информацію моей страницы";
 "privacy_setting_see_groups" = "Кому дозволено видеть мои общества и встрѣчи";
@@ -338,6 +396,7 @@
 "privacy_value_only_me" = "Мнѣ одному";
 "privacy_value_only_me_dative" = "Мнѣ одному";
 "privacy_value_nobody" = "Никому";
+
 "your_email_address" = "Адресъ Вашей электронной почты";
 "your_page_address" = "Адресъ Вашей страницы";
 "page_address" = "Адресъ страницы";
@@ -346,30 +405,36 @@
 "you_can_also" = "Вы вольны";
 "delete_your_page" = "порвать Вашъ паспортъ";
 "delete_album" = "устранить альбомъ";
+
 "ui_settings_interface" = "Внѣшній видъ";
 "ui_settings_sidebar" = "Лѣвое меню";
 "ui_settings_rating" = "Рейтингъ";
 "ui_settings_rating_show" = "Показывать";
 "ui_settings_rating_hide" = "Скрывать";
+
 "two_factor_authentication" = "Двухфакторная аутентификація";
 "two_factor_authentication_disabled" = "Обезпечиваетъ надежную защиту отъ взлома: для входа на страницу необходимо ввести кодъ, полученный въ приложеніи 2FA.";
 "two_factor_authentication_enabled" = "Двухфакторная аутентификація включена. Ваша страница защищена.";
 "two_factor_authentication_login" = "У васъ включена двухфакторная аутентификація. Для входа введите кодъ полученный въ приложеніи.";
+
 "two_factor_authentication_settings_1" = "Двухфакторную аутентификацію черезъ TOTP можно использовать даже безъ интернета. Для этого вамъ понадобится приложеніе для генераціи кодовъ. Напримѣръ, <b>Google Authenticator</b> для Android и iOS или ​свободные <b>Aegis и andOTP</b> для Android. Убѣдитесь, что на телефонѣ точно установлена дата и время.";
 "two_factor_authentication_settings_2" = "Используя приложеніе для двухфакторной аутентификаціи, ​отсканируйте приведенный ниже QR-кодъ:";
 "two_factor_authentication_settings_3" = "или вручную введите секретный ключъ: <b>$1</b>.";
 "two_factor_authentication_settings_4" = "Теперь введите кодъ, который вамъ предоставило приложеніе, и шифръ отъ вашей страницы, чтобы мы могли подтвердить, что вы дѣйствительно вы.";
+
 "connect" = "Подключить";
 "enable" = "Включить";
 "disable" = "Отключить";
 "code" = "Кодъ";
 "2fa_code" = "Кодъ 2FA";
+
 "incorrect_password" = "Невѣрный шифръ";
 "incorrect_code" = "Невѣрный кодъ";
 "incorrect_2fa_code" = "Невѣрный кодъ двухфакторной аутентификаціи";
 "two_factor_authentication_enabled_message" = "Двухфакторная аутентификація включена";
 "two_factor_authentication_enabled_message_description" = "Вашу страницу стало труднѣе взломать. Рекомендуемъ вамъ скачать <a href='javascript:viewBackupCodes()'>​резервные коды</a>";
 "two_factor_authentication_disabled_message" = "Двухфакторная аутентификація отключена";
+
 "view_backup_codes" = "Посмотрѣть резервные коды";
 "backup_codes" = "Резервные коды для подтвержденія входа";
 "two_factor_authentication_backup_codes_1" = "Резервные коды позволяютъ подтверждать входъ, когда у васъ нѣтъ доступа къ телефону, напримѣръ, въ путешествіи.";
@@ -390,12 +455,15 @@
 "video_uploaded" = "Загружено";
 "video_updated" = "Обновлено";
 "video_link_to_yt" = "Ссылка на YouTube";
+
 "info_name" = "Названіе";
 "info_description" = "Описаніе";
 "info_uploaded_by" = "Загрузилъ";
 "info_upload_date" = "Дата загрузки";
+
 "videos_zero" = "Ни одного экземпляра";
 "videos_one" = "Один экземпляръ";
+"videos_few" = "$1 экземпляра";
 "videos_many" = "$1 экземпляровъ";
 "videos_other" = "$1 экземпляровъ";
 
@@ -404,6 +472,7 @@
 "feedback" = "Отвѣты";
 "unread" = "Непрочитанное";
 "archive" = "Архивъ";
+
 "notifications_like" = "$1 оцѣнилъ вашу $2запись$3 отъ $4";
 "notifications_repost" = "$1 подѣлился(-лась) вашей $2записью$3 отъ $4";
 "notifications_comment_under" = "$1 оставилъ(-ла) замѣчаніе подъ $2";
@@ -413,11 +482,13 @@
 "notifications_under_video" = "вашимъ $3экземпляромъ$4";
 "notifications_post" = "$1 написалъ(-ла) $2запись$3 на вашей стѣнѣ: $4";
 "notifications_appoint" = "$1 назвачилъ васъ руководителемъ общества $2";
+
 "nt_liked_yours" = "оценил вашъ";
 "nt_shared_yours" = "подѣлился(-ась) вашимъ";
 "nt_commented_yours" = "оставилъ(а) замѣчаніе подъ";
 "nt_written_on_your_wall" = "написалъ(а) на вашей стѣнѣ";
 "nt_made_you_admin" = "назначилъ(а) васъ руководителемъ сообщества";
+
 "nt_from" = "отъ";
 "nt_yours_adjective" = "вашимъ";
 "nt_yours_feminitive_adjective" = "вашей";
@@ -434,9 +505,11 @@
 "time_minutes_ago" = "$1 минутъ какъ";
 "time_today" = "сегодня";
 "time_yesterday" = "вчера";
+
 "points" = "Голоса";
 "points_count" = "голосовъ";
 "on_your_account" = "на вашемъ счету";
+
 "vouchers" = "Ваучеры";
 "have_voucher" = "Есть ваучеръ";
 "voucher_token" = "Кодъ ваучера";
@@ -458,24 +531,31 @@
 "gifts" = "Подарки";
 "gifts_zero" = "Нѣтъ подарковъ";
 "gifts_one" = "Одинъ подарокъ";
+"gifts_few" = "$1 подарка";
 "gifts_many" = "$1 подарковъ";
 "gifts_other" = "$1 подарковъ";
 "gifts_left" = "Подарковъ осталось: $1";
 "gifts_left_one" = "Одинъ подарокъ остался";
+"gifts_left_few" = "$1 подарка осталось";
 "gifts_left_many" = "$1 подарковъ осталось";
 "gifts_left_other" = "$1 подарковъ осталось";
+
 "send_gift" = "Отправить подарокъ";
+
 "gift_select" = "Выбрать подарокъ";
 "collections" = "Коллекціи";
 "confirm" = "Подтвержденіе";
 "as_anonymous" = "Анонимно";
 "gift_your_message" = "Ваше сообщеніе";
+
 "free_gift" = "Безплатно";
 "coins" = "Голоса";
 "coins_zero" = "0 голосовъ";
 "coins_one" = "Одинъ голосъ";
+"coins_few" = "$1 голоса";
 "coins_many" = "$1 голосовъ";
 "coins_other" = "$1 голосовъ";
+
 "users_gifts" = "Подарки";
 
 /* Support */
@@ -490,17 +570,25 @@
 "support_status_2" = "Закрыто";
 "support_greeting_hi" = "Здравствуйте, $1!";
 "support_greeting_regards" = "Съ уваженіемъ,<br/>команда поддержки $1.";
+
 "support_faq" = "Часто ​задаваемые вопросы";
 "support_list" = "Списокъ обращеній";
 "support_new" = "Новое обращеніе";
+
+"support_faq_title" = "Для кого этотъ сайтъ?";
 "support_faq_content" = "Сайтъ предназначенъ для поиска друзей и знакомыхъ, а также для просмотра данныхъ пользователя. Это какъ справочникъ города, съ помощью котораго люди могутъ быстро найти актуальную информацію о человѣкѣ.";
+
 "support_new_title" = "Введите тему вашего обращенія";
 "support_new_content" = "Опишите проблему или предложеніе";
+
 "comment" = "Комментарій";
 "sender" = "Отправитель";
+
 "author" = "Авторъ";
+
 "you_have_not_entered_text" = "Вы не ввели текстъ";
 "you_have_not_entered_name_or_text" = "Вы не ввели имя или текстъ";
+
 "ticket_changed" = "​Тикетъ​ измѣненъ";
 "ticket_changed_comment" = "Измѣненія вступятъ силу черезъ нѣсколько секундъ.";
 
@@ -518,8 +606,10 @@
 "error_4" = "Пользователь не существуетъ";
 "information_-1" = "Операція выполнена успѣшно";
 "information_-2" = "Входъ выполненъ успѣшно";
+
 "no_data" = "Нѣтъ данныхъ";
 "no_data_description" = "Въ этомъ представленіи отсутствуютъ данные.";
+
 "error" = "Ошибка";
 "error_shorturl" = "Данный короткій адресъ уже занятъ.";
 "error_segmentation" = "Ошибка сегментаціи";
@@ -528,32 +618,46 @@
 "error_new_password" = "​Новые пароли не совпадаетъ";
 "error_shorturl_incorrect" = "Короткій адресъ имѣетъ некорректный форматъ.";
 "error_repost_fail" = "Не удалось подѣлиться записью";
+
 "forbidden" = "Ошибка доступа";
 "forbidden_comment" = "Настройки приватности этого пользователя не разрѣшаютъ вамъ смотрѣть на его страницу.";
+
 "changes_saved" = "Измѣненія сохранены";
 "changes_saved_comment" = "Новый ​данные появятся на вашей страницѣ";
+
 "photo_saved" = "Фотографія сохранена";
 "photo_saved_comment" = "Новое ​изображніе профиля появится у васъ на страницѣ";
+
 "shared_succ" = "Запись появится на вашей стѣнѣ. Нажмите на увѣдомленіе, чтобы перейти къ своей стѣнѣ.";
+
 "invalid_email_address" = "Невѣрный Email адресъ";
 "invalid_email_address_comment" = "Email, который вы ввели, не является корректнымъ.";
+
 "invalid_telegram_name" = "Невѣрное имя Telegram аккаунта";
 "invalid_telegram_name_comment" = "Вы ввели невѣрное имя аккаунта Telegram.";
+
 "invalid_birth_date" = "Невѣрная дата рожденія";
 "invalid_birth_date_comment" = "Дата рожденія, которую вы ввели, не является корректной.";
+
 "token_manipulation_error" = "Ошибка манипулированія ​токеномъ";
 "token_manipulation_error_comment" = "​Токенъ недѣйствителенъ или истекъ";
+
 "profile_changed" = "Профиль измѣненъ";
 "profile_changed_comment" = "Вашъ активный профиль былъ измѣненъ.";
 "profile_not_found" = "Пользователь не найденъ.";
+
 "suspicious_registration_attempt" = "Подозрительная попытка регистраціи";
 "suspicious_registration_attempt_comment" = "Вы пытались зарегистрироваться изъ подозрительнаго мѣста.";
+
 "rate_limit_error" = "​Чумба, ты совсѣмъ ебнутый?";
 "rate_limit_error_comment" = "Сходи къ мозгоправу, попей колесики. ВЪ $1 нельзя вбрасывать щитпосты такъ часто. Кодъ исключенія: $2.";
+
 "not_enough_permissions" = "Недостаточно правъ";
 "not_enough_permissions_comment" = "У васъ недостаточно правъ чтобы выполнять это дѣйствіе.";
+
 "login_required_error" = "Недостаточно правъ";
 "login_required_error_comment" = "Чтобы просматривать эту страницу, нужно зайти на сайтъ.";
+
 "captcha_error" = "Неправильно введены ​символы";
 "captcha_error_comment" = "Пожалуйста, убѣдитесь, что вы правильно заполнили ​поле съ ​капчей.";
 
@@ -577,7 +681,7 @@
 "no" = "Нѣтъ";
 "cancel" = "Отмѣна";
 "edit_action" = "Измѣнить";
+
 "warning" = "Вниманіе";
 "question_confirm" = "Это дѣйствіе нельзя отмѣнить. Вы дѣйствительно увѣрены въ томъ что хотите сдѣлать?";
-
-
+ 
